--- a/package.json
+++ b/package.json
@@ -46,5 +46,5 @@
     "tailwindcss": "^3.4.3",
     "gh-pages": "^5.0.0"
   },
-  "homepage": "https://LSTu5.github.io/personalWebsite/about"
+  "homepage": "https://LSTu5.github.io"
 }
