--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-social-icons": "^6.16.0",
+    "react-type-animation": "^3.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,10 +42,11 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "autoprefixer": "^10.4.13",
+    "gh-pages": "^5.0.0",
     "postcss": "^8.4.20",
-    "tailwindcss": "^3.4.3",
-    "gh-pages": "^5.0.0"
+    "tailwindcss": "^3.4.3"
   },
   "homepage": "https://LSTu5.github.io/personalWebsite"
 }
