--- a/package.json
+++ b/package.json
@@ -49,5 +49,5 @@
     "postcss": "^8.4.20",
     "tailwindcss": "^3.4.3"
   },
-  "homepage": "https://LSTu5.github.io/personalWebsite"
+  "homepage": "https://LSTu5.github.io/myWebsite"
 }
